Corrected link to seismogram page

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 	<hi>Endpoints</hi>
 	<ul>
 		<li><a href="maps.htm">maps</a></li>
-		<li><a href="seismograms.htm">maps</a></li>
+		<li><a href="seismograms.htm">seismograms</a></li>
 	</ul>
 </body>
 </html>
