--- a/seismograms.htm
+++ b/seismograms.htm
@@ -7,7 +7,7 @@
 	<image id="slide" src="" style="width: 100%; height: 100%;"></image>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="/static/slideshow.js"></script>
+<script src="static/slideshow.js"></script>
 <script>
 	$(document).ready(function() {
 		eq.initPage("seismogram-");
