Fixed arg in initPage for maps

--- a/maps.htm
+++ b/maps.htm
@@ -10,7 +10,7 @@
 <script src="static/slideshow.js"></script>
 <script>
 	$(document).ready(function() {
-		eq.initPage("seismogram-");
+		eq.initPage("map-");
 	});
 </script>
 </html>
